--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>Angular hello world</title>
         <style>
        div{
-       	background-color: pink;
-       	margin: 0 auto;
-       	width: 600px;
-       	
+        background-color: pink;
+        margin: 0 auto;
+        width: 600px;
+        
        }
         </style>
     </head>
@@ -17,9 +17,9 @@
     ng-init--数据的初试化
     ng-model--做数据模型的绑定，即当前元素的value值与user.name建立绑定，当没有时，创建一个
     {{user.name}}就是将NAME绑定到某个段落的innerHTML-->
-    <body >
-     <div ng-app ng-init="user.name='I love you'">
-     	<h1>使用 angular实现双边数据绑定</h1>
+    <body ng-app>
+     <div  ng-init="user.name='I love you'">
+      <h1>使用 angular实现双边数据绑定</h1>
      <p><input type="text" placeholder="你想说什么" ng-model="user.name"></p>
      <p>我替你保密@@@<strong>{{user.name}}</strong></p>
      </div>
